--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
  flex-direction: column;
   align-items: center;
   justify-content: center;
- 
+ overflow-x:hidden;
  height: auto;
 
 }
@@ -646,3 +646,4 @@ height: 25px;
 }
 
 }
+
